fix(incidents): MA-590 prevent displaying Invalid dates and fix type alignement

--- a/incidents/src/main/resources/public/sass/global/components/punishments/_type.scss
+++ b/incidents/src/main/resources/public/sass/global/components/punishments/_type.scss
@@ -1,5 +1,6 @@
 .punishment-type {
   &-punishment, &-sanction {
+    text-align: center !important;
     color: $white;
   }
 
